updates auth guard
